[package]
name = "twapi-reqwest"
version = "0.1.3"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Twitter OAuth library used by reqwest."
repository = "https://github.com/aoyagikouhei/twapi-reqwest-rs"
keywords = ["twitter", "oauth"]
categories = ["api-bindings"]
readme = "Readme.md"
documentation = "https://docs.rs/twapi-reqwest"

[dependencies]
base64 = "^0.13"
reqwest = { version = "^0.10", features = ["json"] }
serde_json = "^1.0"
serde_urlencoded = "^0.7"
twapi-oauth = "^0.1"
#twapi-oauth = { path = "../twapi-oauth-rs" }

[dev-dependencies]
tokio = { version = "^0.2", features = ["macros"] }
