[package]
name = "twapi-reqwest"
version = "0.2.4"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Twitter OAuth library used by reqwest."
repository = "https://github.com/aoyagikouhei/twapi-reqwest-rs"
keywords = ["twitter", "oauth"]
categories = ["api-bindings"]
readme = "Readme.md"
documentation = "https://docs.rs/twapi-reqwest"

[dependencies]
base64 = "^0.13"
reqwest = { version = "^0.11", features = ["json", "multipart"], default-features = false, optional = true }
serde_json = "^1.0"
serde_urlencoded = "^0.7"
twapi-oauth = "~0.1.4"
#twapi-oauth = { path = "../twapi-oauth-rs" }

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "^1", features = ["macros"] }
